--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,5 @@
     "python.linting.pylintEnabled": false,
     "python.pythonPath": "/usr/local/bin/python3",
     "python.linting.enabled": false,
-    "python.linting.pep8Enabled": true
+    "python.linting.pycodestyleEnabled": true
 }
